--- a/AquaSurvivor/UCGameOver.xaml
+++ b/AquaSurvivor/UCGameOver.xaml
@@ -6,7 +6,11 @@
              xmlns:local="clr-namespace:AquaSurvivor"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+    <Grid x:Name="gridGameOver" >
+        <Label x:Name="labGameOver" Content="GAME OVER" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="130" Width="800" Background="#FF4FBCBF" FontSize="72" FontWeight="Bold" HorizontalContentAlignment="Center"/>
+        <Button x:Name="butRetenter" Content="RETENTER" HorizontalAlignment="Left" Margin="165,326,0,0" VerticalAlignment="Top" Height="83" Width="183" FontWeight="Bold" FontSize="36"/>
+        <Button x:Name="butQuitter" Content="QUITTER" HorizontalAlignment="Left" Margin="452,326,0,0" VerticalAlignment="Top" Height="83" Width="183" FontWeight="Bold" FontSize="36"/>
+        <Label x:Name="labPerdu" Content="trop nul t'as perdu" HorizontalAlignment="Left" Margin="86,178,0,0" VerticalAlignment="Top" Height="85" Width="613" FontSize="24"/>
+
     </Grid>
 </UserControl>
