--- a/AquaSurvivor/UCJeu.xaml
+++ b/AquaSurvivor/UCJeu.xaml
@@ -5,8 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AquaSurvivor"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+             d:DesignHeight="450" d:DesignWidth="800" Loaded="UserControl_Loaded">
+    <Canvas x:Name="canvasJeu">
+        <Canvas.Background>
+            <ImageBrush ImageSource="/img/Fonds/imgAquarium.png"/>
+        </Canvas.Background>
+        <Image x:Name="imgPoisson" Height="65" Canvas.Left="350" Source="/img/Poissons/imgPoisson1Droite.png" Stretch="Fill" Canvas.Top="328" Width="100"/>
+        <ProgressBar x:Name="barreFaim" Height="21" Canvas.Left="598" Canvas.Top="34" Width="185" Value="100" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+
+    </Canvas>
 </UserControl>
