--- a/AquaSurvivor/UCReglesJeu.xaml
+++ b/AquaSurvivor/UCReglesJeu.xaml
@@ -11,7 +11,7 @@
         <Label x:Name="labBienvenue" Content="BIENVENUE" HorizontalAlignment="Center" VerticalAlignment="Top" Height="100" Width="800" Background="#FF4AABA9" HorizontalContentAlignment="Center" FontSize="72" FontWeight="Bold"/>
         <Label x:Name="labRegleJeu" Content="REGLES" HorizontalAlignment="Left" Margin="70,114,0,0" VerticalAlignment="Top" Height="36" Width="147" Background="#FF65B5B0"/>
 
-        <Button x:Name="but_Continuer" Content="CONTINUER" HorizontalAlignment="Left" Margin="644,390,0,0" VerticalAlignment="Top" FontWeight="Bold" BorderBrush="Black" BorderThickness="5,5,5,5" Background="#FF76BFC1" Height="50" Width="146" Click="but_Continuer_Click"/>
+        <Button x:Name="but_Continuer" Content="CONTINUER" Margin="0,0,10,10" FontWeight="Bold" BorderBrush="Black" BorderThickness="5,5,5,5" Background="#FF76BFC1" Click="but_Continuer_Click" HorizontalAlignment="Right" Width="146" Height="50" VerticalAlignment="Bottom"/>
         <StackPanel Margin="208,150,0,54" HorizontalAlignment="Left" Width="537">
             <Label Content="Vous possédez une barre de faim qui diminue en continue. &#xD;&#xA;si elle se vide vous mourrez." Width="536" Background="{x:Null}" Height="48" HorizontalAlignment="Left" FontSize="16" FontWeight="Bold"/>
             <Label Content="Vous devez manger de la nourriture pour remplit votre barre de faim" Width="537" Background="{x:Null}" HorizontalAlignment="Left" Height="41" FontSize="16" FontWeight="Bold" RenderTransformOrigin="0.5,0.5">
@@ -30,15 +30,15 @@
             <Label Content="Atteignez les objectifs afin de passer au niveau supérieur" Height="37" FontSize="16" FontWeight="Bold" Background="{x:Null}"/>
 
         </StackPanel>
-        <Grid Margin="19,155,592,60">
+        <Grid Margin="19,155,0,0" HorizontalAlignment="Left" Width="189" Height="235" VerticalAlignment="Top">
             <Image Margin="78,49,38,156" Source="/img/Nourriture/imgCrevette.png" Stretch="Fill"/>
             <Image Margin="33,43,78,150" Source="/img/Nourriture/imgPoissonJaune.png" Stretch="Fill"/>
             <Image Margin="17,47,125,171" Source="/img/Nourriture/imgSardine.png" Stretch="Fill" RenderTransformOrigin="0.5,0.5">
-                
+
             </Image>
             <Image Margin="126,74,-28,103" Source="/img/Déchets/imgBouteille.png" Stretch="Fill"/>
             <Image Margin="104,98,36,117" Source="/img/Déchets/imgCigare.png" Stretch="Fill" RenderTransformOrigin="0.5,0.5">
-          
+
             </Image>
             <Image Margin="81,97,66,116" Source="/img/Déchets/imgCigarette.png" Stretch="Fill" RenderTransformOrigin="0.5,0.5">
                 <Image.RenderTransform>
@@ -55,8 +55,8 @@
             <Image Margin="139,164,10,26" Source="/img/Nourriture/imgEtoileDeMer.png" Stretch="Fill"/>
 
         </Grid>
-        <Image Margin="170,199,592,216" Source="/img/Nourriture/imgCalamar.png" Stretch="Fill"/>
-        <Image Margin="52,242,695,174" Source="/img/Déchets/imgPoubelle.png" Stretch="Fill"/>
+        <Image Margin="170,199,0,0" Source="/img/Nourriture/imgCalamar.png" Stretch="Fill" HorizontalAlignment="Left" Width="38" Height="35" VerticalAlignment="Top"/>
+        <Image Margin="52,242,0,0" Source="/img/Déchets/imgPoubelle.png" Stretch="Fill" HorizontalAlignment="Left" Width="53" Height="34" VerticalAlignment="Top"/>
 
     </Grid>
 </UserControl>
