--- a/AquaSurvivor/UCJeu.xaml
+++ b/AquaSurvivor/UCJeu.xaml
@@ -19,7 +19,8 @@
                 <ImageBrush ImageSource="pack://application:,,,/img/Boutons/imgBoutonPause.png"/>
             </Button.Background>
         </Button>
-
+        <Label x:Name="labelTemps" Content="Temps : 60s" 
+       HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" FontWeight="Bold" Foreground="Red"/>
 
 
     </Canvas>
