--- a/AquaSurvivor/UCJeu.xaml
+++ b/AquaSurvivor/UCJeu.xaml
@@ -19,6 +19,8 @@
                 <ImageBrush ImageSource="pack://application:,,,/img/Boutons/imgBoutonPause.png"/>
             </Button.Background>
         </Button>
+        <Label x:Name="labelTemps" Content="Temps : 60s" 
+        Width="100" FontWeight="Bold" Foreground="Red"/>
 
 
 
