--- a/AquaSurvivor/UCDemarrage.xaml
+++ b/AquaSurvivor/UCDemarrage.xaml
@@ -6,9 +6,11 @@
              xmlns:local="clr-namespace:AquaSurvivor"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Grid>        
+        
         <Button x:Name="but_Play" Content="PLAY" Margin="0,0,0,54" FontWeight="Bold" FontSize="72" Click="but_Play_Click" HorizontalAlignment="Center" Width="240" Height="127" VerticalAlignment="Bottom"/>
-        <Label Content="image de notre logo a mettre" HorizontalAlignment="Center" Height="122" Margin="0,77,0,0" VerticalAlignment="Top" Width="568" Background="#FF4CB3B1"/>
+        <Image Margin="10,42,0,208" Source="/img/logo.png" Stretch="Fill" />
+
 
     </Grid>
 </UserControl>
